--- a/src/components/UpdateMedication/UpdateMedicationPage.css
+++ b/src/components/UpdateMedication/UpdateMedicationPage.css
@@ -1,7 +1,8 @@
 .links{
-    margin-top: -5%;
+    margin-top: 5%;
     text-align: center;
     margin-bottom: -5%;
+    padding-bottom: 5%;
 }
 
 .center-form{
@@ -25,11 +26,6 @@ button{
     margin-bottom: 2%;
 }
 
-h5{
-    margin-bottom: 2%;
-    margin-top: 10%;
-}
-
 .update-form{
     margin-top: 5%;
     margin-bottom: 3%;
@@ -37,4 +33,8 @@ h5{
 
 .alert{
     margin-top: 5%;
+}
+
+form{
+    margin-top: 2%;
 }
