--- a/src/components/UpdateMedication/UpdateMedicationPage.css
+++ b/src/components/UpdateMedication/UpdateMedicationPage.css
@@ -1,10 +1,3 @@
-.links{
-    margin-top: 5%;
-    text-align: center;
-    margin-bottom: -5%;
-    padding-bottom: 5%;
-}
-
 .center-form{
     margin-left: 10%;
     margin-right: 41%;
@@ -60,4 +53,22 @@ button{
 
 form{
     margin-top: 2%;
+}
+
+.tabs{
+    margin-top: 5%;
+    text-align: center;
+    margin-bottom: -5%;
+    padding-bottom: 5%;
+}
+
+.tabs2{
+    background-color: white;
+    margin-right: 4%;
+    margin-left: 4%;
+    border: none;
+}
+
+.underlined{
+    text-decoration-line: underline;
 }
