--- a/src/components/Register/RegisterForm.css
+++ b/src/components/Register/RegisterForm.css
@@ -23,3 +23,28 @@ h5{
     margin-top: 5%;
     margin-bottom: 3%;
 }
+
+.my-container{
+    padding-bottom: 440px;
+    position: relative;
+}
+
+.my-container:before{
+    padding-bottom: 440px;
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background-image: url("https://www.wearegnp.com/-/media/assets/gnp/images/01-home-page-new-images/home-page-service-images/pharmacy-discussion.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+}
+
+.my-content{
+    position: relative;
+}
