--- a/src/components/UpdateMedication/UpdateMedicationPage.css
+++ b/src/components/UpdateMedication/UpdateMedicationPage.css
@@ -21,7 +21,7 @@
     padding-bottom: .5%;
 }
 
-.dropdown2{
+.dropdown-two{
     padding-top: .5%;
     padding-bottom: .5%;
     padding-right: 8%;
@@ -62,7 +62,7 @@ form{
     padding-bottom: 5%;
 }
 
-.tabs2{
+.tabs-two{
     background-color: white;
     margin-right: 4%;
     margin-left: 4%;
