Change background photo on the login and register pages.

--- a/src/components/Login/LoginForm.css
+++ b/src/components/Login/LoginForm.css
@@ -43,7 +43,7 @@ h1{
     width: 100%;
     height: 100%;
     opacity: 0.5;
-    background-image: url("https://www.wearegnp.com/-/media/assets/gnp/images/01-home-page-new-images/home-page-service-images/pharmacy-discussion.jpg");
+    background-image: url("https://media.capc.org/images/AdobeStock_274131656.original.original.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 0;
