--- a/src/components/UpdateMedication/UpdateMedicationPage.css
+++ b/src/components/UpdateMedication/UpdateMedicationPage.css
@@ -24,7 +24,7 @@
 .dropdown-two{
     padding-top: .5%;
     padding-bottom: .5%;
-    padding-right: 24%;
+    margin-right: -3%;
 }
 
 .form-select{
